fixed header icons and github and preview buttons on mobile screen

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -64,4 +64,15 @@
   #footer {
     flex-direction: column;
   }
+  .header-icons i {
+    font-size: 2rem !important; /* Adjust as needed */
+  }
+  .header-icons img {
+    height: 30px !important;
+    width: 30px !important;
+  }
+  .github-button,
+  .preview-button {
+    flex-direction: column;
+  }
 }
